--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
   margin : 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  color : #ffffff;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #5c5c5c;
 }
 
 code {
